--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "nebular",
   "version": "0.0.0",
+  "engines":{"node": "8.11.x"}, 
   "scripts": {
     "ng": "ng",
     "start": "ng serve",
