--- a/package.json
+++ b/package.json
@@ -1,7 +1,9 @@
 {
   "name": "nebular",
   "version": "0.0.0",
-  "engines":{"node": "8.11.x"}, 
+  "engines": {
+    "node": "8.11.x"
+  },
   "scripts": {
     "ng": "ng",
     "start": "ng serve",
@@ -12,6 +14,7 @@
   },
   "private": true,
   "dependencies": {
+    "@angular/cli": "~6.1.5",
     "@angular/animations": "^6.1.0",
     "@angular/common": "^6.1.0",
     "@angular/compiler": "^6.1.0",
