--- a/angular.json
+++ b/angular.json
@@ -20,13 +20,18 @@
             "tsConfig": "src/tsconfig.app.json",
             "assets": [
               "src/favicon.ico",
-              "src/assets",
+              "src/assets/fonts",
+              "src/assets/images",
               "src/web.config"
             ],
             "styles": [
               "src/styles.css"
             ],
-            "scripts": []
+            "scripts": [
+              "node_modules/jquery/dist/jquery.min.js",
+              "src/assets/scripts/3rdParty/bootstrap.min.js",
+              "node_modules/zingchart/client/zingchart.min.js"
+            ]
           },
           "configurations": {
             "production": {
@@ -74,11 +79,16 @@
             "karmaConfig": "src/karma.conf.js",
             "styles": [
               "src/styles.css"
+             ],
+            "scripts": [
+              "node_modules/jquery/dist/jquery.min.js",
+              "src/assets/scripts/3rdParty/bootstrap.min.js",
+              "node_modules/zingchart/client/zingchart.min.js"
             ],
-            "scripts": [],
             "assets": [
               "src/favicon.ico",
-              "src/assets"
+              "src/assets/fonts",
+              "src/assets/images"
             ]
           }
         },
