--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@angular/router": "^6.1.0",
     "core-js": "^2.5.4",
     "jquery": "^3.3.1",
+    "ngx-cookie": "^4.0.2",
     "rxjs": "^6.0.0",
     "zingchart": "^2.8.0",
     "zone.js": "~0.8.26"
