--- a/src/assets/images/asset_icons/web.config
+++ b/src/assets/images/asset_icons/web.config
@@ -3,7 +3,7 @@
     <system.webServer>
         <httpErrors errorMode="Custom">
             <remove statusCode="404" subStatusCode="-1" />
-            <error statusCode="404" prefixLanguageFilePath="" path="/images/assets/unknown.png" responseMode="ExecuteURL" />
+            <error statusCode="404" prefixLanguageFilePath="" path="/assets/images/asset_icons/unknown.png" responseMode="ExecuteURL" />
         </httpErrors>
     </system.webServer>
 </configuration>
