--- a/.travis.yml
+++ b/.travis.yml
@@ -1,8 +1,12 @@
 language: node_js
 node_js:
   - "8"
-sudo: false
+sudo: required
 dist: trusty
+
+#Install headless Chrome
+addons:
+  chrome: stable
 
 cache:
   directories:
@@ -11,4 +15,3 @@ cache:
 branches:
   only:
   - master
-
