--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "@types/jquery": "^3.3.6",
     "@types/node": "~8.9.4",
     "codelyzer": "~4.2.1",
+    "coveralls": "^3.0.2",
     "jasmine-core": "~2.99.1",
     "jasmine-spec-reporter": "~4.2.1",
     "karma": "~1.7.1",
