--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -10,6 +10,14 @@
             "name": "run Chrome at localhost",
             "url": "http://localhost:4200",
             "webRoot": "${workspaceFolder}"
+        },
+        {
+            "type": "chrome",
+            "request": "attach",
+            "name": "attach 2 Karma@Chrome",
+            "address": "localhost",
+            "port": 9222,
+            "webRoot": "${workspaceFolder}"
         }
     ]
 }
