Fixed #3 by adding exception to the path rewriting rules in IIS root config

--- a/src/web.config
+++ b/src/web.config
@@ -10,6 +10,10 @@
     <system.webServer>
     <rewrite>
         <rules>
+            <rule name="serve PNG icons normally" stopProcessing="true">
+                <match url=".*assets/images/asset_icons/.*png" />
+                <action type="None" />
+            </rule>
             <rule name="angular cli routes" stopProcessing="true">
                 <match url=".*" />
                 <conditions logicalGrouping="MatchAll">
