Cleanup after ddSlick removal. Fixes #2

--- a/angular.json
+++ b/angular.json
@@ -31,8 +31,7 @@
               "src/assets/scripts/page.js",
               "node_modules/jquery/dist/jquery.min.js",
               "src/assets/scripts/3rdParty/bootstrap.min.js",
-              "node_modules/zingchart/client/zingchart.min.js",
-              "src/assets/scripts/3rdParty/jquery.ddslick.js"
+              "node_modules/zingchart/client/zingchart.min.js"
             ]
           },
           "configurations": {
@@ -86,8 +85,7 @@
               "src/assets/scripts/page.js",
               "node_modules/jquery/dist/jquery.min.js",
               "src/assets/scripts/3rdParty/bootstrap.min.js",
-              "node_modules/zingchart/client/zingchart.min.js",
-              "src/assets/scripts/3rdParty/jquery.ddslick.js"
+              "node_modules/zingchart/client/zingchart.min.js"
             ],
             "assets": [
               "src/favicon.ico",
