--- a/.travis.yml
+++ b/.travis.yml
@@ -16,6 +16,9 @@ branches:
   only:
   - master
 
+script:
+  - npm test
+  - npm run e2e -- --protractor-config=e2e/protractor-ci.conf.js
+
 after_success:
   - npm run coveralls
-  - npm run e2e -- --protractor-config=e2e/protractor-ci.conf.js
