--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "core-js": "^2.5.4",
     "jquery": "^3.3.1",
     "ngx-cookie": "^4.0.2",
+    "npm": "^6.9.0",
     "rxjs": "^6.0.0",
     "zingchart": "^2.8.0",
     "zone.js": "~0.8.26"
