--- a/package.json
+++ b/package.json
@@ -28,7 +28,7 @@
     "@angular/platform-browser-dynamic": "^6.1.0",
     "@angular/router": "^6.1.0",
     "core-js": "^2.5.4",
-    "jquery": "^3.3.1",
+    "jquery": "^3.4.1",
     "ngx-cookie": "^4.0.2",
     "npm": "^6.9.0",
     "rxjs": "^6.0.0",
@@ -36,7 +36,7 @@
     "zone.js": "~0.8.26"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "^0.13.8",
+    "@angular-devkit/build-angular": "^0.13.9",
     "@angular/cli": "^7.3.8",
     "@angular/compiler-cli": "^7.2.12",
     "@angular/language-service": "^6.1.0",
@@ -54,6 +54,7 @@
     "karma-jasmine": "~1.1.1",
     "karma-jasmine-html-reporter": "^0.2.2",
     "protractor": "~5.4.0",
+    "tar": "^4.4.8",
     "ts-node": "~5.0.1",
     "tslint": "~5.9.1",
     "typescript": "^3.2.4"
