--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
     "karma-jasmine": "~1.1.1",
     "karma-jasmine-html-reporter": "^0.2.2",
     "protractor": "~5.4.0",
+    "tar": ">=4.4.2",
     "ts-node": "~5.0.1",
     "tslint": "~5.9.1",
     "typescript": "^3.2.4"
