--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   },
   "private": true,
   "dependencies": {
+    "@angular-devkit/build-angular": "^0.803.3",
     "@angular/animations": "^8.2.5",
     "@angular/cdk": "^7.0.3",
     "@angular/common": "^8.2.5",
@@ -35,7 +36,6 @@
     "zone.js": "~0.9.1"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "^0.13.8",
     "@angular/cli": "^8.3.3",
     "@angular/compiler-cli": "^8.2.5",
     "@angular/language-service": "^8.2.5",
@@ -56,6 +56,6 @@
     "tar": ">=4.4.2",
     "ts-node": "~5.0.1",
     "tslint": "~5.9.1",
-    "typescript": "^3.5.3"
+    "typescript": "~3.4.5"
   }
 }
