Unit tests for the CustomExchange component. Minor refactoring.

--- a/.travis.yml
+++ b/.travis.yml
@@ -4,9 +4,9 @@ node_js:
 sudo: required
 dist: trusty
 
-#Install headless Chrome (TEMPORARILY CHANGED FROM stable)
+#Install headless Chrome
 addons:
-  chrome: beta
+  chrome: stable
 
 cache:
   directories:
