--- a/package.json
+++ b/package.json
@@ -39,19 +39,19 @@
     "@angular/cli": "^8.3.3",
     "@angular/compiler-cli": "^8.2.5",
     "@angular/language-service": "^8.2.5",
-    "@types/jasmine": "~2.8.6",
-    "@types/jasminewd2": "~2.0.3",
+    "@types/jasmine": "^3.4.1",
+    "@types/jasminewd2": "^2.0.7",
     "@types/jquery": "^3.3.6",
     "@types/node": "~8.9.4",
     "codelyzer": "~5.1.0",
     "coveralls": "^3.0.2",
-    "jasmine-core": "~2.99.1",
+    "jasmine-core": "~3.5.0",
     "jasmine-spec-reporter": "~4.2.1",
-    "karma": "^4.0.1",
-    "karma-chrome-launcher": "~2.2.0",
-    "karma-coverage-istanbul-reporter": "~2.0.0",
-    "karma-jasmine": "~1.1.1",
-    "karma-jasmine-html-reporter": "^0.2.2",
+    "karma": "^4.3.0",
+    "karma-chrome-launcher": "^3.1.0",
+    "karma-coverage-istanbul-reporter": "~2.1.0",
+    "karma-jasmine": "^2.0.1",
+    "karma-jasmine-html-reporter": "^1.4.2",
     "protractor": "^5.4.2",
     "tar": ">=4.4.2",
     "ts-node": "~5.0.1",
