--- a/package.json
+++ b/package.json
@@ -56,6 +56,7 @@
     "tar": ">=4.4.2",
     "ts-node": "~5.0.1",
     "tslint": "~5.9.1",
-    "typescript": "~3.4.5"
+    "typescript": "~3.4.5",
+    "webdriver-manager": "^12.1.7"
   }
 }
