--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
     "karma-coverage-istanbul-reporter": "~2.1.0",
     "karma-jasmine": "^2.0.1",
     "karma-jasmine-html-reporter": "^1.4.2",
+    "karma-jquery": "^0.2.4",
     "protractor": "^5.4.2",
     "tar": ">=4.4.2",
     "ts-node": "~5.0.1",
