Executed NPM update in attempt to address some sec violations

--- a/package.json
+++ b/package.json
@@ -15,46 +15,46 @@
   },
   "private": true,
   "dependencies": {
-    "@angular-devkit/build-angular": "^0.803.3",
-    "@angular/animations": "^8.2.5",
-    "@angular/cdk": "^7.0.3",
-    "@angular/common": "^8.2.5",
-    "@angular/compiler": "^8.2.5",
-    "@angular/core": "^8.2.5",
-    "@angular/forms": "^8.2.5",
-    "@angular/http": "^7.2.15",
-    "@angular/material": "^7.0.3",
-    "@angular/platform-browser": "^8.2.5",
-    "@angular/platform-browser-dynamic": "^8.2.5",
-    "@angular/router": "^8.2.5",
-    "core-js": "^2.5.4",
-    "jquery": "^3.4.1",
-    "ngx-cookie": "^4.0.2",
-    "npm": "^6.13.4",
-    "rxjs": "^6.5.3",
-    "zingchart": "^2.8.0",
+    "@angular-devkit/build-angular": "^0.803.26",
+    "@angular/animations": "^8.2.14",
+    "@angular/cdk": "^7.3.7",
+    "@angular/common": "^8.2.14",
+    "@angular/compiler": "^8.2.14",
+    "@angular/core": "^8.2.14",
+    "@angular/forms": "^8.2.14",
+    "@angular/http": "^7.2.16",
+    "@angular/material": "^7.3.7",
+    "@angular/platform-browser": "^8.2.14",
+    "@angular/platform-browser-dynamic": "^8.2.14",
+    "@angular/router": "^8.2.14",
+    "core-js": "^2.6.11",
+    "jquery": "^3.5.0",
+    "ngx-cookie": "^4.1.2",
+    "npm": "^6.14.4",
+    "rxjs": "^6.5.5",
+    "zingchart": "^2.8.9",
     "zone.js": "~0.9.1"
   },
   "devDependencies": {
-    "@angular/cli": "^8.3.3",
-    "@angular/compiler-cli": "^8.2.5",
-    "@angular/language-service": "^8.2.5",
-    "@types/jasmine": "^3.4.1",
-    "@types/jasminewd2": "^2.0.7",
-    "@types/jquery": "^3.3.6",
+    "@angular/cli": "^8.3.26",
+    "@angular/compiler-cli": "^8.2.14",
+    "@angular/language-service": "^8.2.14",
+    "@types/jasmine": "^3.5.10",
+    "@types/jasminewd2": "^2.0.8",
+    "@types/jquery": "^3.3.34",
     "@types/node": "~8.9.4",
-    "codelyzer": "~5.1.0",
-    "coveralls": "^3.0.2",
+    "codelyzer": "^5.1.2",
+    "coveralls": "^3.0.11",
     "jasmine-core": "~3.5.0",
     "jasmine-spec-reporter": "~4.2.1",
-    "karma": "^4.3.0",
+    "karma": "^4.4.1",
     "karma-chrome-launcher": "^3.1.0",
-    "karma-coverage-istanbul-reporter": "~2.1.0",
+    "karma-coverage-istanbul-reporter": "^2.1.1",
     "karma-jasmine": "^2.0.1",
-    "karma-jasmine-html-reporter": "^1.4.2",
+    "karma-jasmine-html-reporter": "^1.5.3",
     "karma-jquery": "^0.2.4",
-    "protractor": "^5.4.2",
-    "tar": ">=4.4.2",
+    "protractor": "^5.4.3",
+    "tar": "^6.0.1",
     "ts-node": "~5.0.1",
     "tslint": "~5.9.1",
     "typescript": "~3.4.5",
