--- a/.travis.yml
+++ b/.travis.yml
@@ -1,8 +1,9 @@
+dist: xenial
+sudo: required
+
 language: node_js
 node_js:
   - "10"
-sudo: required
-dist: trusty
 
 #Install headless Chrome
 addons:
