--- a/package.json
+++ b/package.json
@@ -15,50 +15,50 @@
   },
   "private": true,
   "dependencies": {
-    "@angular-devkit/build-angular": "^0.803.26",
-    "@angular/animations": "^8.2.14",
-    "@angular/cdk": "^7.3.7",
-    "@angular/common": "^8.2.14",
-    "@angular/compiler": "^8.2.14",
-    "@angular/core": "^8.2.14",
-    "@angular/forms": "^8.2.14",
-    "@angular/http": "^7.2.16",
-    "@angular/material": "^7.3.7",
-    "@angular/platform-browser": "^8.2.14",
-    "@angular/platform-browser-dynamic": "^8.2.14",
-    "@angular/router": "^8.2.14",
+    "@angular-devkit/build-angular": "^0.1000.6",
+    "@angular/animations": "^10.0.10",
+    "@angular/cdk": "^10.1.3",
+    "@angular/common": "^10.0.10",
+    "@angular/compiler": "^10.0.10",
+    "@angular/core": "^10.0.10",
+    "@angular/forms": "^10.0.10",
+    "@angular/material": "^10.1.3",
+    "@angular/platform-browser": "^10.0.10",
+    "@angular/platform-browser-dynamic": "^10.0.10",
+    "@angular/router": "^10.0.10",
+    "@nguniversal/common": "^10.0.2",
     "core-js": "^2.6.11",
-    "jquery": "^3.5.0",
+    "jquery": "^3.5.1",
     "ngx-cookie": "^4.1.2",
     "npm": "^6.14.6",
-    "rxjs": "^6.5.5",
-    "zingchart": "^2.8.9",
-    "zone.js": "~0.9.1"
+    "rxjs": "^6.6.2",
+    "zingchart": "^2.9.1",
+    "zone.js": "~0.10.3"
   },
   "devDependencies": {
-    "@angular/cli": "^8.3.26",
-    "@angular/compiler-cli": "^8.2.14",
+    "@angular/cli": "^10.0.6",
+    "@angular/compiler-cli": "^10.0.10",
     "@angular/language-service": "^8.2.14",
-    "@types/jasmine": "^3.5.10",
+    "@nguniversal/express-engine": "^10.0.2",
+    "@types/jasmine": "^3.5.12",
     "@types/jasminewd2": "^2.0.8",
-    "@types/jquery": "^3.3.34",
-    "@types/node": "~8.9.4",
-    "@nguniversal/express-engine": "^9.1.0",
-    "codelyzer": "^5.1.2",
-    "coveralls": "^3.0.11",
+    "@types/jquery": "^3.5.1",
+    "@types/node": "^14.6.0",
+    "codelyzer": "^6.0.0",
+    "coveralls": "^3.1.0",
     "jasmine-core": "~3.5.0",
     "jasmine-spec-reporter": "~4.2.1",
     "karma": "^4.4.1",
     "karma-chrome-launcher": "^3.1.0",
     "karma-coverage-istanbul-reporter": "^2.1.1",
     "karma-jasmine": "^2.0.1",
-    "karma-jasmine-html-reporter": "^1.5.3",
+    "karma-jasmine-html-reporter": "^1.5.4",
     "karma-jquery": "^0.2.4",
-    "protractor": "^5.4.3",
-    "tar": "^6.0.1",
+    "protractor": "^5.4.4",
+    "tar": "^6.0.5",
     "ts-node": "~5.0.1",
     "tslint": "~5.9.1",
-    "typescript": "~3.4.5",
+    "typescript": "^3.9.7",
     "webdriver-manager": "^12.1.7"
   }
 }
