--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "@types/node": "^14.6.0",
     "codelyzer": "^6.0.0",
     "coveralls": "^3.1.0",
+    "css-loader": "^4.2.1",
     "jasmine-core": "~3.5.0",
     "jasmine-spec-reporter": "~4.2.1",
     "karma": "^4.4.1",
