--- a/.github/workflows/deploy-to-Azure.yml
+++ b/.github/workflows/deploy-to-Azure.yml
@@ -5,7 +5,7 @@ on:
     branches: [ master ]
 env:
   AZURE_WEBAPP_NAME: nebular
-  AZURE_WEBAPP_PACKAGE_PATH: '.'
+  AZURE_WEBAPP_PACKAGE_PATH: './dist'
   NODE_VERSION: '12.x'
 
 jobs:
