--- a/.github/workflows/deploy-to-Azure.yml
+++ b/.github/workflows/deploy-to-Azure.yml
@@ -4,7 +4,7 @@ on:
   push:
     branches: [ master ]
 env:
-  AZURE_WEBAPP_NAME: nebular
+  AZURE_WEBAPP_NAME: nebular2
   AZURE_WEBAPP_PACKAGE_PATH: './dist'
   NODE_VERSION: '12.x'
 
