--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "nebular",
-  "version": "20.9.7",
+  "version": "20.12.29",
   "engines": {
     "node": "12.18.x"
   },
@@ -15,18 +15,19 @@
   },
   "private": true,
   "dependencies": {
-    "@angular-devkit/build-angular": "^0.1000.6",
-    "@angular/animations": "^10.0.10",
-    "@angular/cdk": "^10.1.3",
-    "@angular/common": "^10.0.10",
-    "@angular/compiler": "^10.0.10",
-    "@angular/core": "^10.0.10",
-    "@angular/forms": "^10.0.10",
-    "@angular/material": "^10.1.3",
-    "@angular/platform-browser": "^10.0.10",
-    "@angular/platform-browser-dynamic": "^10.0.10",
-    "@angular/router": "^10.0.10",
-    "@nguniversal/common": "^10.0.2",
+    "@angular-devkit/build-angular": "^0.1100.5",
+    "@angular/animations": "^11.0.5",
+    "@angular/cdk": "^11.0.3",
+    "@angular/common": "^11.0.5",
+    "@angular/compiler": "^11.0.5",
+    "@angular/core": "^11.0.5",
+    "@angular/forms": "^11.0.5",
+    "@angular/material": "^11.0.3",
+    "@angular/platform-browser": "^11.0.5",
+    "@angular/platform-browser-dynamic": "^11.0.5",
+    "@angular/platform-server": "^11.0.5",
+    "@angular/router": "^11.0.5",
+    "@nguniversal/common": "^11.0.1",
     "core-js": "^2.6.11",
     "jquery": "^3.5.1",
     "ngx-cookie": "^4.1.2",
@@ -36,15 +37,15 @@
     "zone.js": "~0.10.3"
   },
   "devDependencies": {
-    "@angular/cli": "^10.0.6",
-    "@angular/compiler-cli": "^10.0.10",
+    "@angular/cli": "^11.0.5",
+    "@angular/compiler-cli": "^11.0.5",
     "@angular/language-service": "^8.2.14",
-    "@nguniversal/express-engine": "^10.0.2",
+    "@nguniversal/express-engine": "^11.0.1",
     "@types/jasmine": "^3.5.12",
     "@types/jasminewd2": "^2.0.8",
     "@types/jquery": "^3.5.1",
     "@types/node": "^14.6.0",
-    "codelyzer": "^6.0.0",
+    "codelyzer": "^6.0.1",
     "coveralls": "^3.1.0",
     "jasmine-core": "~3.5.0",
     "jasmine-spec-reporter": "~4.2.1",
@@ -58,7 +59,7 @@
     "tar": "^6.0.5",
     "ts-node": "~5.0.1",
     "tslint": "~5.9.1",
-    "typescript": "^3.9.7",
+    "typescript": "~4.0.0",
     "webdriver-manager": "^12.1.7"
   }
 }
