remote ref to protractor CI config

--- a/.github/workflows/deploy-to-Azure.yml
+++ b/.github/workflows/deploy-to-Azure.yml
@@ -32,7 +32,7 @@ jobs:
         github-token: ${{ secrets.GITHUB_TOKEN }}
 
     - name: E2E tests
-      run: npm run e2e -- --protractorConfig=e2e/protractor-ci.conf.js
+      run: npm run e2e
 
     - name: PROD build
       run: npm run build -- --prod
