--- a/.github/workflows/deploy-to-Azure.yml
+++ b/.github/workflows/deploy-to-Azure.yml
@@ -34,7 +34,7 @@ jobs:
     - name: Update Chrome before E2E
     - run: |
       sudo apt-get update
-      sudo apt-get -- -y install google-chrome-stable
+      sudo apt-get -- --only-upgrade install google-chrome-stable
       google-chrome -- --version
 
     - name: E2E tests
