--- a/.github/workflows/deploy-to-Azure.yml
+++ b/.github/workflows/deploy-to-Azure.yml
@@ -34,8 +34,8 @@ jobs:
     - name: Update Chrome before E2E
     - run: |
         sudo apt-get update
-        sudo apt-get -- --only-upgrade install google-chrome-stable
-        google-chrome -- --version
+        sudo apt-get --only-upgrade install google-chrome-stable
+        google-chrome --version
 
     - name: E2E tests
       run: npm run e2e -- --protractorConfig=e2e/protractor-ci.conf.js
