--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "nebular",
-  "version": "21.4.19",
+  "version": "21.4.19.2",
   "engines": {
     "node": "12.18.x"
   },
@@ -15,36 +15,36 @@
   },
   "private": true,
   "dependencies": {
-    "@angular-devkit/build-angular": "^0.1100.5",
-    "@angular/animations": "^11.0.5",
-    "@angular/cdk": "^11.0.3",
-    "@angular/common": "^11.0.5",
-    "@angular/compiler": "^11.0.5",
-    "@angular/core": "^11.0.5",
-    "@angular/forms": "^11.0.5",
-    "@angular/material": "^11.0.3",
-    "@angular/platform-browser": "^11.0.5",
-    "@angular/platform-browser-dynamic": "^11.0.5",
-    "@angular/platform-server": "^11.0.5",
-    "@angular/router": "^11.0.5",
-    "@nguniversal/common": "^11.0.1",
-    "core-js": "^2.6.11",
-    "jquery": "^3.5.1",
+    "@angular-devkit/build-angular": "^0.1100.7",
+    "@angular/animations": "^11.2.10",
+    "@angular/cdk": "^11.2.9",
+    "@angular/common": "^11.2.10",
+    "@angular/compiler": "^11.2.10",
+    "@angular/core": "^11.2.10",
+    "@angular/forms": "^11.2.10",
+    "@angular/material": "^11.2.9",
+    "@angular/platform-browser": "^11.2.10",
+    "@angular/platform-browser-dynamic": "^11.2.10",
+    "@angular/platform-server": "^11.2.10",
+    "@angular/router": "^11.2.10",
+    "@nguniversal/common": "^11.2.1",
+    "core-js": "^2.6.12",
+    "jquery": "^3.6.0",
     "ngx-cookie": "^4.1.2",
-    "npm": "^6.14.6",
-    "rxjs": "^6.6.2",
-    "zingchart": "^2.9.1",
+    "npm": "^6.14.13",
+    "rxjs": "^6.6.7",
+    "zingchart": "^2.9.3",
     "zone.js": "~0.10.3"
   },
   "devDependencies": {
-    "@angular/cli": "^11.0.5",
-    "@angular/compiler-cli": "^11.0.5",
+    "@angular/cli": "^11.2.9",
+    "@angular/compiler-cli": "^11.2.10",
     "@angular/language-service": "^8.2.14",
-    "@nguniversal/express-engine": "^11.0.1",
-    "@types/jasmine": "^3.5.12",
+    "@nguniversal/express-engine": "^11.2.1",
+    "@types/jasmine": "^3.6.9",
     "@types/jasminewd2": "^2.0.8",
-    "@types/jquery": "^3.5.1",
-    "@types/node": "^14.6.0",
+    "@types/jquery": "^3.5.5",
+    "@types/node": "^14.14.41",
     "codelyzer": "^6.0.1",
     "coveralls": "^3.1.0",
     "jasmine-core": "~3.6.0",
@@ -56,10 +56,10 @@
     "karma-jasmine-html-reporter": "^1.5.4",
     "karma-jquery": "^0.2.4",
     "protractor": "^7.0.0",
-    "tar": "^6.0.5",
+    "tar": "^6.1.0",
     "ts-node": "~5.0.1",
     "tslint": "~5.9.1",
-    "typescript": "~4.0.0",
-    "webdriver-manager": "^12.1.7"
+    "typescript": "^4.0.7",
+    "webdriver-manager": "^12.1.8"
   }
 }
