--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "nebular",
   "version": "23.06.01",
   "engines": {
-    "node": "16.10.x"
+    "node": ">=16.14.2"
   },
   "scripts": {
     "ng": "ng",
@@ -49,9 +49,9 @@
     "coveralls": "^3.1.1",
     "jasmine-core": "~3.9.0",
     "jasmine-spec-reporter": "~7.0.0",
-    "karma": "^6.3.16",
+    "karma": "^6.4.2",
     "karma-chrome-launcher": "^3.1.0",
-    "karma-coverage": "^2.0.3",
+    "karma-coverage": "^2.2.0",
     "karma-jasmine": "^4.0.1",
     "karma-jasmine-html-reporter": "^1.7.0",
     "karma-jquery": "^0.2.4",
