--- a/angular.json
+++ b/angular.json
@@ -121,6 +121,10 @@
           "configurations": {
             "production": {
               "devServerTarget": "nebular:serve:production"
+            },
+            "ci": {
+              "devServerTarget": "ng-github-actions:serve:production",
+              "protractorConfig": "e2e/protractor-ci.conf.js"
             }
           }
         },
