--- a/angular.json
+++ b/angular.json
@@ -123,19 +123,10 @@
           "options": {
             "watch": true,
             "headless": false
-          }
-        },
-        "ct": {
-          "builder": "@cypress/schematic:cypress",
-          "options": {
-            "devServerTarget": "nebular:serve",
-            "watch": true,
-            "headless": false,
-            "testingType": "component"
           },
           "configurations": {
-            "development": {
-              "devServerTarget": "nebular:serve:development"
+            "production": {
+              "devServerTarget": "nebular:serve:production"
             }
           }
         },
@@ -151,66 +142,16 @@
               "devServerTarget": "nebular:serve:production"
             }
           }
-        }
-      }
-    },
-    "nebular-e2e": {
-      "root": "e2e/",
-      "projectType": "application",
-      "architect": {
-        "e2e": {
+        },
+        "e2e-alone": {
           "builder": "@cypress/schematic:cypress",
           "options": {
-            "devServerTarget": "nebular-e2e:serve",
-            "watch": true,
+            "devServerTarget": "nebular:serve",
             "headless": false
           },
           "configurations": {
             "production": {
-              "devServerTarget": "nebular-e2e:serve:production"
-            }
-          }
-        },
-        "lint": {
-          "builder": "@angular-devkit/build-angular:tslint",
-          "options": {
-            "tsConfig": "",
-            "exclude": [
-              "**/node_modules/**"
-            ]
-          }
-        },
-        "cypress-run": {
-          "builder": "@cypress/schematic:cypress",
-          "options": {
-            "devServerTarget": "nebular-e2e:serve",
-            "configFile": "e2e//cypress.config.ts"
-          },
-          "configurations": {
-            "production": {
-              "devServerTarget": "nebular-e2e:serve:production"
-            }
-          }
-        },
-        "cypress-open": {
-          "builder": "@cypress/schematic:cypress",
-          "options": {
-            "watch": true,
-            "headless": false,
-            "configFile": "e2e//cypress.config.ts"
-          }
-        },
-        "ct": {
-          "builder": "@cypress/schematic:cypress",
-          "options": {
-            "devServerTarget": "nebular-e2e:serve",
-            "watch": true,
-            "headless": false,
-            "testingType": "component"
-          },
-          "configurations": {
-            "development": {
-              "devServerTarget": "nebular-e2e:serve:development"
+              "devServerTarget": "nebular:serve:production"
             }
           }
         }
