--- a/.gitignore
+++ b/.gitignore
@@ -25,6 +25,10 @@
 !.vscode/launch.json
 !.vscode/extensions.json
 
+# cypress tests
+cypress/videos
+cypress/screenshots
+
 # misc
 .angular/*
 /.sass-cache
