--- a/.github/workflows/deploy-to-Azure.yml
+++ b/.github/workflows/deploy-to-Azure.yml
@@ -46,6 +46,11 @@ jobs:
         browser: chrome
         start: npm start
         wait-on: 'http://localhost:4200'
+    - uses: actions/upload-artifact@v3
+      if: failure()
+      with:
+        name: cypress-videos
+        path: cypress/videos
 
     - name: E2E tests
       uses: cypress-io/github-action@v5
