--- a/.github/workflows/deploy-to-Azure.yml
+++ b/.github/workflows/deploy-to-Azure.yml
@@ -14,7 +14,7 @@ jobs:
 
     steps:
     - name: Checkout
-      uses: actions/checkout@v2
+      uses: actions/checkout@v3
 
     - name: Use Node.js ${{ env.NODE_VERSION }}
       uses: actions/setup-node@v1
@@ -52,6 +52,7 @@ jobs:
       uses: cypress-io/github-action@v5
       with:
         browser: chrome
+        start: npm start
         wait-on: 'http://localhost:4200'
     - uses: actions/upload-artifact@v3
       if: failure()
