--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "nebular",
-  "version": "23.06.10",
+  "version": "23.06.11",
   "engines": {
     "node": ">=16.14.2"
   },
@@ -13,9 +13,7 @@
     "lint": "ng lint",
     "coveralls": "cat ./coverage/lcov.info | ./node_modules/coveralls/bin/coveralls.js",
     "e2e": "ng e2e",
-    "e2e-auto": "ng run nebular:e2e-headless:test",
-    "cypress:open": "cypress open",
-    "cypress:run": "cypress run"
+    "e2e-auto": "ng run nebular:e2e-headless:test"
   },
   "private": true,
   "dependencies": {
