--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "nebular",
-  "version": "23.06.11",
+  "version": "23.06.12",
   "engines": {
     "node": ">=16.14.2"
   },
@@ -33,7 +33,6 @@
     "core-js": "^3.19.1",
     "jquery": "^3.6.0",
     "ngx-cookie": "^5.0.2",
-    "npm": "^7.24.2",
     "rxjs": "^7.4.0",
     "zingchart": "^2.9.7",
     "zone.js": "~0.11.4"
@@ -59,10 +58,8 @@
     "karma-jasmine": "^4.0.1",
     "karma-jasmine-html-reporter": "^1.7.0",
     "karma-jquery": "^0.2.4",
-    "tar": "^6.1.11",
     "ts-node": "~10.8.1",
     "tslint": "~5.20.1",
-    "typescript": "^4.8.4",
-    "webdriver-manager": "^12.1.8"
+    "typescript": "^4.8.4"
   }
 }
