--- a/package.json
+++ b/package.json
@@ -38,6 +38,11 @@
     "zone.js": "~0.11.4"
   },
   "devDependencies": {
+    "@angular-eslint/builder": "14.4.0",
+    "@angular-eslint/eslint-plugin": "14.4.0",
+    "@angular-eslint/eslint-plugin-template": "14.4.0",
+    "@angular-eslint/schematics": "14.4.0",
+    "@angular-eslint/template-parser": "14.4.0",
     "@angular/cli": "^14.2.11",
     "@angular/compiler-cli": "^14.3.0",
     "@angular/language-service": "^14.3.0",
@@ -47,9 +52,11 @@
     "@types/jasminewd2": "^2.0.10",
     "@types/jquery": "^3.5.8",
     "@types/node": "^15.14.9",
-    "codelyzer": "^6.0.2",
+    "@typescript-eslint/eslint-plugin": "5.43.0",
+    "@typescript-eslint/parser": "5.43.0",
     "coveralls": "^3.1.1",
     "cypress": "^12.13.0",
+    "eslint": "^8.28.0",
     "jasmine-core": "~3.9.0",
     "jasmine-spec-reporter": "~7.0.0",
     "karma": "^6.4.2",
@@ -59,7 +66,6 @@
     "karma-jasmine-html-reporter": "^1.7.0",
     "karma-jquery": "^0.2.4",
     "ts-node": "~10.8.1",
-    "tslint": "~5.20.1",
     "typescript": "^4.8.4"
   }
 }
