--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -15,6 +15,7 @@
         "createDefaultProgram": true
       },
       "extends": [
+        "plugin:@typescript-eslint/recommended",
         "plugin:@angular-eslint/recommended",
         "plugin:@angular-eslint/template/process-inline-templates"
       ],
@@ -34,7 +35,8 @@
             "style": "camelCase",
             "type": "attribute"
           }
-        ]
+        ],
+        "@typescript-eslint/explicit-module-boundary-types": "error"
       }
     },
     {
