More ESLint rules, some fixes

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -6,9 +6,12 @@
   "overrides": [
     {
       "files": [
-        "*.ts"
+        "*.ts",
+        "*.js"
       ],
+      "env": { "es6": true },
       "parserOptions": {
+        "ecmaVersion": "latest",
         "project": [
           "tsconfig.json"
         ],
@@ -36,7 +39,8 @@
             "type": "attribute"
           }
         ],
-        "@typescript-eslint/explicit-module-boundary-types": "error"
+        "@typescript-eslint/explicit-module-boundary-types": "error",
+        "indent": ["error", 2]    //Indentation of 2 spaces
       }
     },
     {
