--- a/angular.json
+++ b/angular.json
@@ -173,5 +173,13 @@
       "@cypress/schematic",
       "@schematics/angular"
     ]
+  },
+  "schematics": {
+    "@angular-eslint/schematics:application": {
+      "setParserOptionsProject": true
+    },
+    "@angular-eslint/schematics:library": {
+      "setParserOptionsProject": true
+    }
   }
 }
