--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "nebular",
-  "version": "23.11.29",
+  "version": "24.10.28",
   "engines": {
     "node": ">=16.14.2"
   },
@@ -17,37 +17,36 @@
   },
   "private": true,
   "dependencies": {
-    "@angular-devkit/build-angular": "^16.2.10",
-    "@angular/animations": "^16.2.12",
+    "@angular-devkit/build-angular": "^17.3.11",
+    "@angular/animations": "^17.3.12",
     "@angular/cdk": "^16.2.12",
-    "@angular/common": "^16.2.12",
-    "@angular/compiler": "^16.2.12",
-    "@angular/core": "^16.2.12",
-    "@angular/forms": "^16.2.12",
+    "@angular/common": "^17.3.12",
+    "@angular/compiler": "^17.3.12",
+    "@angular/core": "^17.3.12",
+    "@angular/forms": "^17.3.12",
     "@angular/material": "^16.2.12",
-    "@angular/platform-browser": "^16.2.12",
-    "@angular/platform-browser-dynamic": "^16.2.12",
-    "@angular/platform-server": "^16.2.12",
-    "@angular/router": "^16.2.12",
-    "@nguniversal/common": "^16.2.0",
+    "@angular/platform-browser": "^17.3.12",
+    "@angular/platform-browser-dynamic": "^17.3.12",
+    "@angular/platform-server": "^17.3.12",
+    "@angular/router": "^17.3.12",
+    "@angular/ssr": "^17.3.11",
     "core-js": "^3.19.1",
     "jquery": "^3.6.0",
     "ngx-cookie": "^6.0.1",
     "rxjs": "^7.8.1",
     "zingchart": "^2.9.7",
-    "zone.js": "~0.13.3"
+    "zone.js": "~0.14.10"
   },
   "devDependencies": {
     "@angular-eslint/builder": "16.3.1",
     "@angular-eslint/eslint-plugin": "16.3.1",
     "@angular-eslint/eslint-plugin-template": "16.3.1",
-    "@angular-eslint/schematics": "16.3.1",
+    "@angular-eslint/schematics": "^17.2.0",
     "@angular-eslint/template-parser": "16.3.1",
-    "@angular/cli": "^16.2.10",
-    "@angular/compiler-cli": "^16.2.12",
-    "@angular/language-service": "^16.2.12",
+    "@angular/cli": "^17.3.11",
+    "@angular/compiler-cli": "^17.3.12",
+    "@angular/language-service": "^17.3.12",
     "@cypress/schematic": "^2.5.1",
-    "@nguniversal/express-engine": "^16.2.0",
     "@types/jasmine": "^3.10.2",
     "@types/jasminewd2": "^2.0.10",
     "@types/jquery": "^3.5.8",
@@ -66,6 +65,6 @@
     "karma-jasmine-html-reporter": "^1.7.0",
     "karma-jquery": "^0.2.4",
     "ts-node": "~10.8.1",
-    "typescript": "^5.1.6"
+    "typescript": "^5.4.5"
   }
 }
